Store and index a table's rows by partition
Every statement walked every row. INSERT scanned the table for a
matching primary key before each write, so a bulk load was O(n^2) and
seeding 100k rows through CQL was not possible at all; a point lookup by
full primary key cost 12.7 ms at 100k rows; and the static-row sweep and
the partition-wide delete added a scan each.

Rows now live in a map from partition key to that partition's rows,
which is how a node stores them anyway. A WHERE clause that pins every
partition key column resolves to the partitions it reaches, and SELECT,
UPDATE and DELETE read those rather than the table; an IN expands to one
partition per alternative, falling back to a scan past a bound. INSERT
knows its partition outright.

The partition key is read from what a row stores rather than through
getObject, which round-trips every value through its codec.